Fix some line spacing

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -9,7 +9,7 @@ abbr {
 
 p {
   color: #333;
-  line-height: 1.6;
+  line-height: 1.8rem;
   font-size: 0.9rem;
 }
 
