--- a/_sass/basscss/_base-typography.scss
+++ b/_sass/basscss/_base-typography.scss
@@ -25,7 +25,8 @@ ol,
 ul {
   font-size: $h4;
   margin-top: 0;
-  margin-bottom: $space-2;
+  margin-bottom: $space-3;
+  line-height: $space-3;
 }
 
 ol,
